--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="page">
 <!--Хедер-->
-    <header class="page-header">
+    <!-- <header class="page-header">
     <div class="container">        
     <nav class="main-nav">
 <a href="./index.html" class="nav-logo">
@@ -59,12 +59,12 @@
 </ul>
 </nav> 
 </div>
-</header>
+</header> -->
 
 <main>
     <!--Герой-->    
     <section class="hero">
-        <div class="container">    
+        <div class="hero__container container">    
         <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
         <button 
         type="button" 
@@ -74,9 +74,8 @@
     </section>
     
     <!--Преимущества-->
-    <section class="features">
-        <div class="container">
-        <!--Заголовок, который в будущем спрячется, добавляю для семантики-->
+    <!-- <section class="features">
+        <div class="container">        
         <h2 class="section-title visually-hidden">Преимущества</h2>
         <ul class="features-list">
             <li class="features-list__items">
@@ -88,7 +87,6 @@
                 <h3 class="features-list__title">Внимание к деталям</h3>
                 <p class="features-list__text"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>   
-
             <li class="features-list__items">
                 <div class="features-icon">
                     <svg
@@ -127,10 +125,10 @@
             </li>
         </ul>
         </div>        
-        </section>
+        </section> -->
         
         <!--Секция Activity-->
-        <section class="activity">
+        <!-- <section class="activity">
         <div class="container">
         <h2 class="activity__title section-title">Чем мы занимаемся</h2>        
         <ul class="activity__list">
@@ -150,10 +148,10 @@
         </li>
         </ul>
         </div>        
-    </section>
+    </section> -->
 
         <!--Наша команда-->
-    <section class="members">
+    <!-- <section class="members">
         <div class="container">
         <h2 class="members__title section-title">Наша команда</h2>
     <ul class="members__list">
@@ -380,10 +378,10 @@
         </li>
     </ul>
     </div>
-    </section>
+    </section> -->
 
     <!-- Постоянные клиенты -->
-    <section class="clients">
+    <!-- <section class="clients">
     <div class="container">
     <h2 class="clients__title section-title">Постоянные клиенты</h2>
     <ul class="clients__list">
@@ -442,11 +440,11 @@
         </svg></a></li>
     </ul>
     </div>
-    </section>
+    </section> -->
 </main>
 
     <!--Футер-->
-<footer class="footer">
+<!-- <footer class="footer">
 <div class="footer-wrap container">
 <div class="footer-start">    
 <nav class="footer-nav">
@@ -518,11 +516,11 @@
     </div>
 </div>
 </div>
-</footer>
+</footer> -->
 
 
 <!-- МОДАЛКА -->
-<div class="backdrop is-hidden" data-modal>
+<!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal__button" data-modal-close >
             <svg
@@ -532,10 +530,10 @@
             >
                 <use href="images/icons.svg#icon-close-button"></use>
             </svg>
-        </button>
+        </button> -->
 
         <!-- Форма -->
-        <p class="modal__title">
+        <!-- <p class="modal__title">
             Оставьте свои данные, мы вам перезвоним
         </p>
         <form class="modal__form">
@@ -609,9 +607,9 @@
         </div>
         </form>
     </div>
-</div>
+</div> -->
 
-<script src="./js/modal.js"></script>
+<!-- <script src="./js/modal.js"></script> -->
 </body>
 </html>
 
