--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <main>
     <!--Герой-->    
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="hero__container container">    
         <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
         <button 
@@ -71,10 +71,10 @@
         class="button hero__button" data-modal-open>
         Заказать услугу</button>
         </div>
-    </section>
+    </section> -->
     
     <!--Преимущества-->
-    <!-- <section class="features">
+    <section class="features">
         <div class="container">        
         <h2 class="section-title visually-hidden">Преимущества</h2>
         <ul class="features-list">
@@ -125,7 +125,7 @@
             </li>
         </ul>
         </div>        
-        </section> -->
+        </section>
         
         <!--Секция Activity-->
         <!-- <section class="activity">
