Скрывает секцию Activity для мобильных и планшетов

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section> -->
     
     <!--Преимущества-->
-    <section class="features">
+    <!-- <section class="features">
         <div class="container">        
         <h2 class="section-title visually-hidden">Преимущества</h2>
         <ul class="features-list">
@@ -125,10 +125,10 @@
             </li>
         </ul>
         </div>        
-        </section>
+        </section> -->
         
         <!--Секция Activity-->
-        <!-- <section class="activity">
+        <section class="activity hidden-on-mobile ">
         <div class="container">
         <h2 class="activity__title section-title">Чем мы занимаемся</h2>        
         <ul class="activity__list">
@@ -148,7 +148,7 @@
         </li>
         </ul>
         </div>        
-    </section> -->
+    </section>
 
         <!--Наша команда-->
     <!-- <section class="members">
