Добавляет адаптив для секции Наша команда

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </section> -->
         
         <!--Секция Activity-->
-        <section class="activity hidden-on-mobile ">
+        <!-- <section class="activity hidden-on-mobile ">
         <div class="container">
         <h2 class="activity__title section-title">Чем мы занимаемся</h2>        
         <ul class="activity__list">
@@ -148,10 +148,10 @@
         </li>
         </ul>
         </div>        
-    </section>
+    </section> -->
 
         <!--Наша команда-->
-    <!-- <section class="members">
+    <section class="members">
         <div class="container">
         <h2 class="members__title section-title">Наша команда</h2>
     <ul class="members__list">
@@ -378,7 +378,7 @@
         </li>
     </ul>
     </div>
-    </section> -->
+    </section>
 
     <!-- Постоянные клиенты -->
     <!-- <section class="clients">
