Добавляет адаптив для Секции Постоянные клиенты

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             </li>
         </ul>
         </div>        
-        </section> -->
-        
+        </section>          -->
+
         <!--Секция Activity-->
         <!-- <section class="activity hidden-on-mobile ">
         <div class="container">
@@ -150,8 +150,8 @@
         </div>        
     </section> -->
 
-        <!--Наша команда-->
-    <section class="members">
+        <!-- Наша команда-->
+    <!-- <section class="members">
         <div class="container">
         <h2 class="members__title section-title">Наша команда</h2>
     <ul class="members__list">
@@ -378,11 +378,11 @@
         </li>
     </ul>
     </div>
-    </section>
+    </section> -->
 
     <!-- Постоянные клиенты -->
-    <!-- <section class="clients">
-    <div class="container">
+    <section class="clients">
+    <div class="clients__container container">
     <h2 class="clients__title section-title">Постоянные клиенты</h2>
     <ul class="clients__list">
         <li class="clients__item">
@@ -440,7 +440,7 @@
         </svg></a></li>
     </ul>
     </div>
-    </section> -->
+    </section>
 </main>
 
     <!--Футер-->
