Добавляет адаптив для Футера

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     </section> -->
 
     <!-- Постоянные клиенты -->
-    <section class="clients">
+    <!-- <section class="clients">
     <div class="clients__container container">
     <h2 class="clients__title section-title">Постоянные клиенты</h2>
     <ul class="clients__list">
@@ -440,11 +440,11 @@
         </svg></a></li>
     </ul>
     </div>
-    </section>
+    </section> -->
 </main>
 
     <!--Футер-->
-<!-- <footer class="footer">
+<footer class="footer">
 <div class="footer-wrap container">
 <div class="footer-start">    
 <nav class="footer-nav">
@@ -462,7 +462,7 @@
 </div>
 
 <div class="footer-social">
-<span class="footer-social__label">Присоединяйтесь</span>
+<span class="footer-social__label section-title">Присоединяйтесь</span>
 <ul class="social-list">
     <li class="social-list__items">
         <a class="social-list__link" href="">
@@ -496,12 +496,12 @@
 </div>
 
 <div class="subscription">
-    <p class="subscription__title">Подпишитесь на рассылку</p>
+    <p class="subscription__title section-title">Подпишитесь на рассылку</p>
     <div class="subscription__wrap">
     <form class="subscription__form">
         <input type="email" class="subscription__input" placeholder="E-mail">
     </form>
-    <button type="button" class="subscription-button">
+    <button type="button" class="subscription-button button">
         Подписаться
         <svg
             class="subscription-button__icon"
@@ -516,7 +516,7 @@
     </div>
 </div>
 </div>
-</footer> -->
+</footer>
 
 
 <!-- МОДАЛКА -->
