--- a/portfolio.html
+++ b/portfolio.html
@@ -268,7 +268,7 @@
             </div>
     
             <div class="footer-social">
-                <span class="footer-social__label">Присоединяйтесь</span>
+                <span class="footer-social__label section-title">Присоединяйтесь</span>
                 <ul class="social-list">
                     <li class="social-list__items">
                         <a
@@ -330,7 +330,7 @@
             </div>
     
             <div class="subscription">
-                <p class="subscription__title">Подпишитесь на рассылку</p>
+                <p class="subscription__title section-title">Подпишитесь на рассылку</p>
                 <div class="subscription__wrap">
                     <form class="subscription__form">
                         <input
@@ -341,7 +341,7 @@
                     </form>
                     <button
                         type="button"
-                        class="subscription-button"
+                        class="subscription-button button"
                     >
                         Подписаться
                         <svg
