добавляет  адаптив для секции Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     />
 </head>
 <body class="page">
-<header class="page-header">
+<!-- <header class="page-header">
     <div class="container nav">
         <nav class="nav main-nav">
             <a
@@ -83,12 +83,15 @@
             </ul>
         </nav>
     </div>
-</header>       
+</header>        -->
+
 <main>
+
     <section class="portfolio">
         <div class="container">
         <!--Заголовок для семантики-->
         <h1 class="visually-hidden">Портфолио наших работ</h1>       
+        
         <ul class="categories">
             <li class="categories__item">
                 <button type="button" class="button categories__button">Все</button>
@@ -239,7 +242,7 @@
     </section>
 </main>
     <!--Футер-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-wrap container">
             <div class="footer-start">
                 <nav class="footer-nav">
@@ -357,7 +360,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
 
