--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <nav class="main-nav">
 <a href="./index.html" class="nav-logo">
     <span class="nav-logo__basic">Web</span>Studio</a>
+    <button type="button" class="menu-button" aria-expanded="false" data-menu-button ><svg
+        aria-label="Переключатель мобильного меню"
+        width="40"
+        height="40"
+    >
+        <use class="icon-cross" href="images/icons.svg#icon-cross"></use>
+        <use class="icon-menu" href="images/icons.svg#icon-menu"></use>
+    </svg></button>
 <ul class="site-nav">
     <li class="site-nav__item"><a href="./index.html" class="site-nav__link current">Студия</a></li>
     <li class="site-nav__item"><a href="./portfolio.html" class=site-nav__link>Портфолио</a></li>
@@ -63,7 +71,7 @@
 
 <main>
     <!--Герой-->    
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="hero__container container">    
         <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
         <button 
@@ -71,7 +79,7 @@
         class="button hero__button" data-modal-open>
         Заказать услугу</button>
         </div>
-    </section> -->
+    </section>
     
     <!--Преимущества-->
     <!-- <section class="features">
@@ -444,7 +452,7 @@
 </main>
 
     <!--Футер-->
-<footer class="footer">
+<!-- <footer class="footer">
 <div class="footer-wrap container">
 <div class="footer-start">    
 <nav class="footer-nav">
@@ -516,12 +524,12 @@
     </div>
 </div>
 </div>
-</footer>
+</footer> -->
 
 
 <!-- МОДАЛКА -->
-<!-- <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal container">
         <button type="button" class="modal__button" data-modal-close >
             <svg
                 class="modal__icon"
@@ -530,10 +538,10 @@
             >
                 <use href="images/icons.svg#icon-close-button"></use>
             </svg>
-        </button> -->
+        </button>
 
         <!-- Форма -->
-        <!-- <p class="modal__title">
+        <p class="modal__title section-title">
             Оставьте свои данные, мы вам перезвоним
         </p>
         <form class="modal__form">
@@ -599,7 +607,10 @@
                     <use href="images/icons.svg#icon-check"></use>
                 </svg>
                 </span>
-                Соглашаюсь с рассылкой и принимаю &nbsp <a class="conditions" href="">Условия договора</a>          
+                <span class="modal-check__words">
+                Соглашаюсь с рассылкой и принимаю 
+                <a class="conditions" href="">Условия договора</a> 
+                </span>
                 </label>
         </div>
         <div class="modal__submit-button" >
@@ -607,9 +618,10 @@
         </div>
         </form>
     </div>
-</div> -->
+</div>
 
-<!-- <script src="./js/modal.js"></script> -->
+<script src="./js/modal.js"></script>
+<script src="./js/menu.js"></script>
 </body>
 </html>
 
