Добавляет ховеры и фокусы на моб меню

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
 
         <ul class="mob-menu-list list">
             <li class="mob-menu-list__item">
-                <a href="" class="mob-menu-list__link">Студия                    
+                <a href="./index.html"
+                class="mob-menu-list__link">Студия                    
                 </a>
             </li>
             <li class="mob-menu-list__item">
-                <a href="" class="mob-menu-list__link">Портфолио                    
+                <a href="./portfolio.html"
+                class="mob-menu-list__link">Портфолио                    
                 </a>
             </li>
             <li class="mob-menu-list__item">
@@ -318,7 +320,7 @@ class="button hero__button" data-modal-open>
     </section>
 
         <!-- Наша команда-->
-    <!-- <section class="members">
+    <section class="members">
         <div class="container">
         <h2 class="members__title section-title">Наша команда</h2>
     <ul class="members__list">
@@ -737,10 +739,10 @@ class="button hero__button" data-modal-open>
         </li>
     </ul>
     </div>
-    </section> -->
+    </section>
 
     <!-- Постоянные клиенты -->
-    <!-- <section class="clients">
+    <section class="clients">
     <div class="clients__container container">
     <h2 class="clients__title section-title">Постоянные клиенты</h2>
     <ul class="clients__list">
@@ -799,11 +801,11 @@ class="button hero__button" data-modal-open>
         </svg></a></li>
     </ul>
     </div>
-    </section> -->
+    </section>
 </main>
 
     <!--Футер-->
-<!-- <footer class="footer">
+<footer class="footer">
 <div class="footer-wrap container">
 <div class="footer-start">    
 <nav class="footer-nav">
@@ -875,11 +877,11 @@ class="button hero__button" data-modal-open>
     </div>
 </div>
 </div>
-</footer> -->
+</footer>
 
 
 <!-- МОДАЛКА -->
-<!-- <div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-modal>
     <div class="modal container">
         <button type="button" class="modal__button" data-modal-close >
             <svg
@@ -889,10 +891,10 @@ class="button hero__button" data-modal-open>
             >
                 <use href="images/icons.svg#icon-close-button"></use>
             </svg>
-        </button> -->
+        </button>
 
         <!-- Форма -->
-        <!-- <p class="modal__title section-title">
+        <p class="modal__title section-title">
             Оставьте свои данные, мы вам перезвоним
         </p>
         <form class="modal__form">
@@ -969,7 +971,7 @@ class="button hero__button" data-modal-open>
         </div>
         </form>
     </div>
-</div> -->
+</div>
 
 <script src="./js/modal.js"></script>
 <script src="./js/menu.js"></script>
